[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"



[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = ["runtime-tokio-rustls",
    "macros",
"postgres",
"uuid",
"chrono",
"migrate"]

[dev-dependencies]
reqwest = "0.12.15"